--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.18.0",
+    "react-spring": "^9.7.3",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0"
   },
