--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.18.0",
+    "react-table": "^7.8.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
