--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.10.1"
+    "sweetalert2": "^11.10.1",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
