--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.18.0",
     "react-table": "^7.8.0",
     "react-tabs": "^6.0.2",
+    "react-to-pdf": "^1.0.1",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1",
